--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,17 @@
     <link href="styles/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/font-awesome.css">
     <link rel="stylesheet" href="styles/contact.css">
-    <title>首页</title>
+    <title>联系</title>
+    <script src="scripts/jquery.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <!--表单验证-->
+    <script src="scripts/jquery.validate.min.js"></script>
+    <script src="scripts/messages_zh.min.js"></script>
+    <!--ajax表单提交-->
+    <script src="scripts/jquery.form.min.js"></script>
+    <!--跨浏览器事件处理-->
+    <script src="scripts/EventUtil.js"></script>
+    <script src="scripts/contact.js"></script>
 </head>
 <body>
 <!--==开始banner==-->
@@ -197,69 +207,8 @@
 <!--  结束footer  -->
 <!--==开始copyright==-->
 <div class="copyright">
-    <h5 class="text-center">Copyright &copy 2016.Yu Yi All rights reserved.</h5>
+    <h5 class="text-center">Copyright &copy 2016 <a href="mailto:523697597@qq.com"> 余毅 </a> 版权所有.</h5>
 </div>
 <!--  结束copyright  -->
-<script src="scripts/jquery.js"></script>
-<script src="scripts/bootstrap.min.js"></script>
-<script src="scripts/EventUtil.js"></script>
-<script src="scripts/jquery.validate.min.js"></script>
-<script src="scripts/messages_zh.min.js"></script>
-<script src="scripts/jquery.form.min.js"></script>
-<script>
-    <!--当输入框达到maxlength后下一个输入框获取焦点-->
-    $(function () {
-        function tabForward(event) {
-            event = EventUtil.getEvent(event);
-            var target = EventUtil.getTarget(event);
-
-            if (target.value.length == target.maxLength) {
-                var form = target.form;
-
-                for (var i = 0, len = form.elements.length; i < len; i++) {
-                    if (form.elements[i] == target) {
-                        if (form.elements[i + 1]) {
-                            form.elements[i + 1].focus();
-                        }
-                        return;
-                    }
-                }
-
-            }
-        }
-
-        var phone1 = document.getElementById("phone1");
-        var phone2 = document.getElementById("phone2");
-        var phone3 = document.getElementById("phone3");
-
-        EventUtil.addHandler(phone1, "keyup", tabForward);
-        EventUtil.addHandler(phone2, "keyup", tabForward);
-        EventUtil.addHandler(phone3, "keyup", tabForward);
-    });
-//表单验证
-    $(function () {
-        $("#form1").validate({
-            rules:{
-                phone:{
-                    required:true,
-                    number:true
-                },
-                email:{
-                    required:true,
-                    email:true
-                },
-                rextarea:{
-                    required:true
-                }
-            }
-        });
-    });
-//ajax方式表单提交
-    $(function () {
-        $("#form1").ajaxForm(function () {
-            $("#output1").show(600);
-        })
-    })
-</script>
 </body>
 </html>
