--- a/gallery.html
+++ b/gallery.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/font-awesome.css">
-    <link rel="stylesheet" href="styles/lightbox.css">
+
     <link rel="stylesheet" href="styles/gallery.css">
     <title>图库</title>
+    <link rel="stylesheet" href="styles/lightbox.css">
+    <script src="scripts/jquery.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
 </head>
 <body>
+<script src="scripts/lightbox.js"></script>
+<script src="scripts/gallery.js"></script>
 <!--==开始banner==-->
 <div class="banner">
     <!--==开始导航链接==-->
@@ -30,11 +35,11 @@
                     <ul class="list-unstyled list-inline ">
                         <li>
                             <a href="mailto:523697597@qq.com">
-                                <i class="fa fa-envelope-o" aria-hidden="true">&nbsp 523697597@qq.com</i>
+                                <i class="fa fa-envelope-o" aria-hidden="true">&nbsp; 523697597@qq.com</i>
                             </a>
                         </li>
                         <li>
-                            <i class="fa fa-phone" aria-hidden="true">&nbsp 185-02810881</i>
+                            <i class="fa fa-phone" aria-hidden="true">&nbsp; 185-02810881</i>
                         </li>
                     </ul>
                 </div>
@@ -111,7 +116,7 @@
 
                 <div class="thumbnail">
                     <a href="img/r1.jpg" data-lightbox="r1.jpg" data-title="特色菜1">
-                        <img src="img/r1.jpg" alt="特色菜1" class="img-responsive" >
+                        <img src="img/r1.jpg" alt="特色菜1" class="img-responsive">
                     </a>
                 </div>
 
@@ -119,76 +124,76 @@
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r2.jpg" data-lightbox="r2.jpg" data-title="特色菜2">
-                        <img src="img/r2.jpg" alt="特色菜2" class="img-responsive" >
+                        <img src="img/r2.jpg" alt="特色菜2" class="img-responsive">
                     </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r3.jpg" data-lightbox="r3.jpg" data-title="特色菜3">
-                        <img src="img/r3.jpg" alt="特色菜3" class="img-responsive" >
+                        <img src="img/r3.jpg" alt="特色菜3" class="img-responsive">
                     </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail"><a href="img/r4.jpg" data-lightbox="r4.jpg" data-title="特色菜4">
-                    <img src="img/r2.jpg" alt="特色菜4" class="img-responsive" >
+                    <img src="img/r2.jpg" alt="特色菜4" class="img-responsive">
                 </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r5.jpg" data-lightbox="r5.jpg" data-title="特色菜5">
-                        <img src="img/r5.jpg" alt="特色菜5" class="img-responsive" >
+                        <img src="img/r5.jpg" alt="特色菜5" class="img-responsive">
                     </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r6.jpg" data-lightbox="r6.jpg" data-title="特色菜6">
-                        <img src="img/r6.jpg" alt="特色菜6" class="img-responsive" >
+                        <img src="img/r6.jpg" alt="特色菜6" class="img-responsive">
                     </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r7.jpg" data-lightbox="r7.jpg" data-title="特色菜7">
-                        <img src="img/r7.jpg" alt="特色菜7" class="img-responsive" >
+                        <img src="img/r7.jpg" alt="特色菜7" class="img-responsive">
                     </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r8.jpg" data-lightbox="r8.jpg" data-title="特色菜8">
-                        <img src="img/r8.jpg" alt="特色菜8" class="img-responsive" >
+                        <img src="img/r8.jpg" alt="特色菜8" class="img-responsive">
                     </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r9.jpg" data-lightbox="r9.jpg" data-title="特色菜9">
-                        <img src="img/r9.jpg" alt="特色菜9" class="img-responsive" >
+                        <img src="img/r9.jpg" alt="特色菜9" class="img-responsive">
                     </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r2.jpg" data-lightbox="r2.jpg" data-title="特色菜2">
-                        <img src="img/r2.jpg" alt="特色菜2" class="img-responsive" >
+                        <img src="img/r2.jpg" alt="特色菜2" class="img-responsive">
                     </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r3.jpg" data-lightbox="r3.jpg" data-title="特色菜3">
-                        <img src="img/r3.jpg" alt="特色菜3" class="img-responsive" >
+                        <img src="img/r3.jpg" alt="特色菜3" class="img-responsive">
                     </a>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <div class="thumbnail">
                     <a href="img/r1.jpg" data-lightbox="r1.jpg" data-title="特色菜1">
-                        <img src="img/r1.jpg" alt="特色菜1" class="img-responsive" >
+                        <img src="img/r1.jpg" alt="特色菜1" class="img-responsive">
                     </a>
 
                 </div>
@@ -242,20 +247,8 @@
 
 <!--==开始copyright==-->
 <div class="copyright">
-    <h5 class="text-center">Copyright &copy 2016.Yu Yi All rights reserved.</h5>
+    <h5 class="text-center">Copyright &copy 2016 <a href="mailto:523697597@qq.com"> 余毅 </a> 版权所有.</h5>
 </div>
 <!--  结束copyright  -->
-<script src="scripts/jquery.js"></script>
-<script src="scripts/lightbox.js"></script>
-<script src="scripts/bootstrap.min.js"></script>
-<script>
-    <!--lightbox插件 使图片弹出-->
-    lightbox.option({
-        showImageNumberLabel:false,//是否显示图片数量
-        positionFromTop:400,//距离顶部距离
-        'resizeDuration': 500,//动画时间
-        'wrapAround': true
-    })
-</script>
 </body>
 </html>
