--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           </a>
         </h1>
       </div>
-      <div class="header-right">
+      <div class="header-right" id="contactWay">
         <div class="details">
-          <ul class="list-unstyled list-inline">
+          <ul class="list-unstyled list-inline" >
             <li>
               <a href="mailto:523697597@qq.com">
-                <i class="fa fa-envelope-o" aria-hidden="true">&nbsp 523697597@qq.com</i>
+                <i class="fa fa-envelope-o" aria-hidden="true">&nbsp; 523697597@qq.com</i>
               </a>
             </li>
             <li>
@@ -51,8 +51,8 @@
           <nav class="navbar navbar-default">
             <div class="navbar-header">
               　<!-- .navbar-toggle样式用于toggle收缩的内容，即nav-collapse collapse样式所在元素 -->
-              <button class="navbar-toggle" type="button" data-toggle="collapse"
-                      data-target=".navbar-responsive-collapse">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                      data-target="#navbar-collapse-1">
                 <span class="sr-only">切换导航栏</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -90,7 +90,7 @@
                   <a href="contact.html">联系</a>
                 </li>
               </ul>
-              <form action="#" class="navbar-form navbar-right" role="search">
+              <form action="#" class="navbar-form navbar-right" role="search" id="searchGroup">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="请输入关键词"/>
                 </div>
@@ -109,12 +109,10 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-6">
-          <h2 class="thin">Proin sed quam</h2>
+          <h2 class="thin">风味特色，美食美客</h2>
           <hr>
-          <h1>Aliquam In in elit</h1>
-          <h1>cursus quam interdum.</h1>
-          <p>Duis porta diam vel arcu finibus, eget pellentesque lacus consequat. Morbi at dui quis nulla
-            malesuada suscipit. Sed vitae leo eget felis gravida dignissim nec a ipsum.</p>
+          <h1>来这里感受味蕾与视觉的碰撞</h1>
+          <p>通过白汁烩小牛肉、酥皮洋葱汤、法式干煎塌目鱼 Hot&Foods 为您带来原汁原味的法式大餐体验，Risotto意大利调味饭、马沙拉酒酱牛肉、鸡肉煎火腿卷，意式风味一触即发。</p>
           <p>
             <a href="about.html">
               <button type="button" class="btn  btn-lg btn-default" id="clickbutton">点击</button>
