--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,9 @@
   <link rel="stylesheet" href="styles/font-awesome.css">
   <link rel="stylesheet" href="styles/contact.css">
   <title>联系</title>
-  <script src="scripts/jquery.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
-  <!--表单验证-->
-  <script src="scripts/jquery.validate.min.js"></script>
-  <script src="scripts/messages_zh.min.js"></script>
-  <!--ajax表单提交-->
-  <script src="scripts/jquery.form.min.js"></script>
-  <!--跨浏览器事件处理-->
-  <script src="scripts/EventUtil.js"></script>
-  <script src="scripts/contact.js"></script>
+  <!--[if lt IE 9]>
+  <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
+  <![endif]-->
 </head>
 <body>
 <!--==开始banner==-->
@@ -34,16 +27,16 @@
           </a>
         </h1>
       </div>
-      <div class="header-right">
+      <div class="header-right" id="contactWay">
         <div class="details">
           <ul class="list-unstyled list-inline">
             <li>
               <a href="mailto:523697597@qq.com">
-                <i class="fa fa-envelope-o" aria-hidden="true">&nbsp 523697597@qq.com</i>
+                <i class="fa fa-envelope-o" aria-hidden="true">&nbsp; 523697597@qq.com</i>
               </a>
             </li>
             <li>
-              <i class="fa fa-phone" aria-hidden="true">&nbsp 185-02810881</i>
+              <i class="fa fa-phone" aria-hidden="true">&nbsp; 185-02810881</i>
             </li>
           </ul>
         </div>
@@ -56,8 +49,8 @@
           <nav class="navbar navbar-default">
             <div class="navbar-header">
               　<!-- .navbar-toggle样式用于toggle收缩的内容，即nav-collapse collapse样式所在元素 -->
-              <button class="navbar-toggle" type="button" data-toggle="collapse"
-                      data-target=".navbar-responsive-collapse">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                      data-target="#navbar-collapse-1">
                 <span class="sr-only">切换导航栏</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -95,7 +88,7 @@
                   <a href="contact.html">联系</a>
                 </li>
               </ul>
-              <form action="#" class="navbar-form navbar-right" role="search">
+              <form action="#" class="navbar-form navbar-right" role="search" id="searchGroup">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="请输入关键词"/>
                 </div>
@@ -119,15 +112,17 @@
         <div class="form-group ">
           <label for="phone1" class="col-xs-2   control-label">手机号</label>
           <div class="col-xs-1 col-xs-offset-1">
-            <input type="text" class="form-control" id="phone1" placeholder="185" maxlength="3" required pattern="\d+"
+            <input type="number" class="form-control" id="phone1" placeholder="185" maxlength="3" required pattern="\d+"
+                   name="phone" autofocus="autofocus">
+          </div>
+          <div class="col-xs-2">
+            <input type="number" class="form-control" id="phone2" placeholder="0281" maxlength="4" required
+                   pattern="\d+"
                    name="phone">
           </div>
           <div class="col-xs-2">
-            <input type="text" class="form-control" id="phone2" placeholder="0281" maxlength="4" required pattern="\d+"
-                   name="phone">
-          </div>
-          <div class="col-xs-2">
-            <input type="text" class="form-control" id="phone3" placeholder="0881" maxlength="4" required pattern="\d+"
+            <input type="number" class="form-control" id="phone3" placeholder="0881" maxlength="4" required
+                   pattern="\d+"
                    name="phone">
           </div>
           <div class="col-xs-1 xinhao">*</div>
@@ -168,7 +163,7 @@
 </div>
 <!--  结束contact  -->
 <!--==开始footer==-->
-<div class="footer">
+<footer class="footer">
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-12">
@@ -207,12 +202,22 @@
       </div>
     </div>
   </div>
-</div>
+</footer>
 <!--  结束footer  -->
 <!--==开始copyright==-->
 <div class="copyright">
   <h5 class="text-center">Copyright &copy; 2016 <a href="mailto:523697597@qq.com"> 余毅 </a> 版权所有.</h5>
 </div>
 <!--  结束copyright  -->
+<script src="http://lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
+<!--表单验证-->
+<script src="scripts/jquery.validate.min.js"></script>
+<script src="scripts/messages_zh.min.js"></script>
+<!--ajax表单提交-->
+<script src="scripts/jquery.form.min.js"></script>
+<!--跨浏览器事件处理-->
+<script src="scripts/EventUtil.js"></script>
+<script src="scripts/contact.js"></script>
 </body>
 </html>
