--- a/gallery.html
+++ b/gallery.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="styles/gallery.css">
   <title>图库</title>
   <link rel="stylesheet" href="styles/lightbox.css">
-  <script src="scripts/jquery.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
+  <!--[if lt IE 9]>
+  <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
+  <![endif]-->
 </head>
 <body>
 <script src="scripts/lightbox.js"></script>
@@ -30,9 +31,9 @@
           </a>
         </h1>
       </div>
-      <div class="header-right">
+      <div class="header-right" id="contactWay">
         <div class="details">
-          <ul class="list-unstyled list-inline ">
+          <ul class="list-unstyled list-inline">
             <li>
               <a href="mailto:523697597@qq.com">
                 <i class="fa fa-envelope-o" aria-hidden="true">&nbsp; 523697597@qq.com</i>
@@ -52,8 +53,8 @@
           <nav class="navbar navbar-default">
             <div class="navbar-header">
               　<!-- .navbar-toggle样式用于toggle收缩的内容，即nav-collapse collapse样式所在元素 -->
-              <button class="navbar-toggle" type="button" data-toggle="collapse"
-                      data-target=".navbar-responsive-collapse">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                      data-target="#navbar-collapse-1">
                 <span class="sr-only">切换导航栏</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -91,7 +92,7 @@
                   <a href="contact.html">联系</a>
                 </li>
               </ul>
-              <form action="#" class="navbar-form navbar-right" role="search">
+              <form action="#" class="navbar-form navbar-right" role="search" id="searchGroup">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="请输入关键词"/>
                 </div>
@@ -203,7 +204,7 @@
 </div>
 <!--   结束gallery   -->
 <!--===开始footer===-->
-<div class="footer">
+<footer class="footer">
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-12">
@@ -242,7 +243,7 @@
       </div>
     </div>
   </div>
-</div>
+</footer>
 <!--  结束footer  -->
 
 <!--==开始copyright==-->
@@ -250,5 +251,7 @@
   <h5 class="text-center">Copyright &copy; 2016 <a href="mailto:523697597@qq.com"> 余毅 </a> 版权所有.</h5>
 </div>
 <!--  结束copyright  -->
+<script src="http://lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 </body>
 </html>
