--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
   <link rel="stylesheet" href="styles/font-awesome.css">
   <link rel="stylesheet" href="styles/index.css">
   <title>首页</title>
-  <!--github网络不好所以把js放head里面-->
-  <script src="scripts/jquery.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
-  <script src="scripts/jquery.lazyload.min.js"></script>
-  <script src="scripts/lazyload.js"></script>
+  <!--[if lt IE 9]>
+  <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
+  <![endif]-->
 </head>
 <body>
 <!--==开始banner==-->
@@ -31,7 +29,7 @@
       </div>
       <div class="header-right" id="contactWay">
         <div class="details">
-          <ul class="list-unstyled list-inline" >
+          <ul class="list-unstyled list-inline">
             <li>
               <a href="mailto:523697597@qq.com">
                 <i class="fa fa-envelope-o" aria-hidden="true">&nbsp; 523697597@qq.com</i>
@@ -338,7 +336,7 @@
 </div>
 <!--  结束newsAndStaff  -->
 <!--==开始footer==-->
-<div class="footer">
+<footer class="footer">
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-12">
@@ -377,12 +375,16 @@
       </div>
     </div>
   </div>
-</div>
+</footer>
 <!--  结束footer  -->
 <!--==开始copyright==-->
 <div class="copyright">
   <h5 class="text-center">Copyright &copy; 2016 <a href="mailto:523697597@qq.com"> 余毅 </a> 版权所有.</h5>
 </div>
 <!--  结束copyright  -->
+<script src="http://lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
+<script src="scripts/jquery.lazyload.min.js"></script>
+<script src="scripts/lazyload.js"></script>
 </body>
 </html>
