--- a/about.html
+++ b/about.html
@@ -234,7 +234,7 @@
   <h5 class="text-center">Copyright &copy; 2016 <a href="mailto:523697597@qq.com"> 余毅 </a> 版权所有.</h5>
 </div>
 <!--  结束copyright  -->
-<script src="http://lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js"></script>
+<script src="https://lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js"></script>
 <script src="scripts/bootstrap.min.js"></script>
 <script src="scripts/jquery.lazyload.min.js"></script>
 <script src="scripts/lazyload.js"></script>
