--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,9 @@
   <link rel="stylesheet" href="styles/lightbox.css">
   <!--[if lt IE 9]>
   <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
+  <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
   <![endif]-->
+  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.js"></script>
 </head>
 <body>
 <script src="scripts/lightbox.js"></script>
@@ -251,7 +253,7 @@
   <h5 class="text-center">Copyright &copy; 2016 <a href="mailto:523697597@qq.com"> 余毅 </a> 版权所有.</h5>
 </div>
 <!--  结束copyright  -->
-<script src="https://lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.js"></script>
 <script src="scripts/bootstrap.min.js"></script>
 </body>
 </html>
